--- a/Elven Population Control/Elven Population Control/Properties/Resources.resx
+++ b/Elven Population Control/Elven Population Control/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="09eed588a581ba5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\09eed588a581ba5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="MicrosoftTeams-image__1_-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MicrosoftTeams-image__1_-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
