--- a/Elven Population Control/Elven Population Control/Properties/Resources.resx
+++ b/Elven Population Control/Elven Population Control/Properties/Resources.resx
@@ -127,10 +127,13 @@
   <data name="MicrosoftTeams-image__1_-removebg-preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MicrosoftTeams-image__1_-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="png-clipart-night-sky-star-background-material-blue-night-sky-star2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\png-clipart-night-sky-star-background-material-blue-night-sky-star2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="png-clipart-night-sky-star-background-material-blue-night-sky-star" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\png-clipart-night-sky-star-background-material-blue-night-sky-star.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="png-clipart-night-sky-star-background-material-blue-night-sky-star2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\png-clipart-night-sky-star-background-material-blue-night-sky-star2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="bullet-png-clipart-11" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bullet-png-clipart-11.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
