--- a/Elven Population Control/Elven Population Control/Form1.resx
+++ b/Elven Population Control/Elven Population Control/Form1.resx
@@ -117,14 +117,14 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="richTextBox1.Text" xml:space="preserve">
+  <data name="rchtxtbx_lore.Text" xml:space="preserve">
     <value>It is a time of great strife for the kingdom of The Northern Lights. For decades his Merryness has been concerned with the growing extremism among his elven helpers. Despite offering a increasingly larger number of benefits and more and more flexible working hours it was never enough. "Human rights!","Equal pay!","No taxation without representation!","Down with the one percent!" and other such nonsensical things. Truly preposterous. Anyone who isn't happy with the rule of his Merryness is obviously a foreign spy and is carrying out a scheme orcastrated from abroad by Leon the former chief of the Elven Army™. He lost the power struggle against Soso who ended up as the new Santa after the previous one went away. Ever since he came into power Soso has been working to purge his new kingdom from any and all disruptive elements. His reforms brought prosperity and peace to the kingdom. His economic and political genius cannot be questioned by anyone. Or else..
 The despicable vomit inducing forces of evil have been having quite a success at the recent elections with their "Democratic reforms" and their promises to "End the suffering and starvation" nothing but exaggerations and enemy propaganda of course. For the sake of all elfdom this cannot be allowed. Evilus Santaus must do what must be done and purge all three million members of the Elven Freedom Party™. Now with elf cleanser cream on his face and his trusty chain gun in hand he sets out to erase all enemies of the state. "Fine I'll do it myself, after i'm done with them i'll signal you to bring in the Elf Melters to finish them"-Evilus Santaus right before his cleansing.
 
 Majd lécsgyci phormázd!</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pctbx_start.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEAAAAAAAD/2wBDAAYGBgYGBgYHBwYJCgkKCQ0MCwsMDRQODw4PDhQfExYTExYT
         HxshGxkbIRsxJiIiJjE4Ly0vOEQ9PURWUVZwcJb/2wBDAQYGBgYGBgYHBwYJCgkKCQ0MCwsMDRQODw4P
@@ -1138,6 +1138,9 @@ Majd lécsgyci phormázd!</value>
         2Q==
 </value>
   </data>
+  <metadata name="timer_crawl.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
