--- a/Elven Population Control/Elven Population Control/SimoSim.resx
+++ b/Elven Population Control/Elven Population Control/SimoSim.resx
@@ -1589,6 +1589,9 @@
         TkSuQmCC
 </value>
   </data>
+  <metadata name="timer_flash.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>119, 17</value>
+  </metadata>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEASABIAAD/4QAiRXhpZgAATU0AKgAAAAgAAQESAAMAAAABAAEAAAAAAAD/4gxY
